syntax = "proto3";
import "base.proto";

package BiuRpc.AppApi;

//@module AppApi App接口

//========================================
//@group Home 首页
//Home begin
//========================================

//轮播
message Banner {
    int32 id = 1; //轮播ID
    string title = 2; //标题
    BiuRpc.Base.Nav nav = 3; //跳转
}

//@desc 获取版本列表
//@class Home
//@method GetHomeInfo
//请求服务端
message RequestHomeGetHomeInfo {
    BiuRpc.Base.Request base = 1;
}

// 返回客户端
message ResponseHomeGetHomeInfo {
    BiuRpc.Base.Response base = 1;
    repeated Banner bannerList = 2; //轮播图列表
}

//@desc 获取推荐商品列表
//@class Home
//@method GetRecommendProductList
//请求服务端
message RequestHomeGetRecommendProductList {
    BiuRpc.Base.Request base = 1;
    int32 page = 2; //页码（从1开始）
    int32 pageSize = 3; //页长度（默认10）
}

// 返回客户端
message ResponseHomeGetRecommendProductList {
    BiuRpc.Base.Response base = 1;
    repeated SimpleProduct productList = 2; //商品列表 
    int32 totalPage = 3; //总页数
}

//========================================
//Home end
//========================================

//========================================
//@group Product 商品
//Product begin
//========================================

//列表商品
message SimpleProduct {
    int32 id = 1; //商品ID
    string title = 2; //商品标题
    BiuRpc.Base.Picture cover = 3; //商品封面
    float price = 4; //价格
}

//商品
message Product {
    int32 id = 1; //商品ID
    string title = 2; //商品标题
    BiuRpc.Base.Picture cover = 3; //商品封面
    float price = 4; //价格
}

//商品评价
message ProductComment {
    int32 id = 1; //评价ID
    BiuRpc.Base.SimpleUser user = 2; //用户
    string content = 3; //内容
    int32 createTime = 4; //评价时间
}

//分类
message Category {
    int32 id = 1; //分类ID
    string title = 2; //标题
    int32 level = 3; //分类层级
    int32 sort = 4; //排序
    int32 createTime = 5; //创建时间
    int32 updateTime = 6; //更新时间
    repeated Category categoryList = 7; //下级分类
}

//@desc 获取分类列表
//@class Product
//@method GetCategoryList
//请求服务端
message RequestProductGetCategoryList {
    BiuRpc.Base.Request base = 1;
}

// 返回客户端
message ResponseProductGetCategoryList {
    BiuRpc.Base.Response base = 1;
    repeated Category categoryList = 2; //分类列表 
}

//@desc 获取商品列表
//@class Product
//@method GetProductList
//请求服务端
message RequestProductGetProductList {
    BiuRpc.Base.Request base = 1;
    int32 page = 2; //页码（从1开始）
    int32 pageSize = 3; //页长度（默认10）
}

// 返回客户端
message ResponseProductGetProductList {
    BiuRpc.Base.Response base = 1;
    repeated SimpleProduct productList = 2; //商品列表 
    int32 totalPage = 3; //总页数
}

//@desc 获取商品详情
//@class Product
//@method GetProductInfo
//请求服务端
message RequestProductGetProductInfo {
    BiuRpc.Base.Request base = 1;
    int32 productId = 2; //商品ID
}

// 返回客户端
message ResponseProductGetProductInfo {
    BiuRpc.Base.Response base = 1;
    Product product = 2; //商品详情
    repeated ProductComment commentList = 3; //评价列表
    int32 commentTotalPage = 4; //评价总页数
}

//@desc 获取商品评价
//@class Product
//@method GetCommentList
//请求服务端
message RequestProductGetCommentList {
    BiuRpc.Base.Request base = 1;
    int32 productId = 2; //商品ID
    int32 page = 3; //页码（从1开始）
    int32 pageSize = 4; //页长度（默认10）
}

// 返回客户端
message ResponseProductGetCommentList {
    BiuRpc.Base.Response base = 1;
    repeated ProductComment commentList = 2; //评价列表
    int32 totalPage = 3; //总页数
}

//========================================
//Product end
//========================================

//========================================
//@group Address 地址
//Address begin
//========================================

//城市
message City {
    int32 id = 1; //城市ID
    int32 pid = 2; //上级城市ID
    string areaCode = 3; //区号
    string name = 4; //名称
    string namePinyin = 5; //名称拼音
    string shortName = 6; //简称
    string zipCode = 7; //邮编
    float lng = 8; //经度
    float lat = 9; //纬度
    SignCityType type = 10; //类型
    int32 createTime = 11; //创建时间
}

//城市类型
enum SignCityType {
    CITY_TYPE_NONE = 0; //无类型
    CITY_TYPE_PROVINCE = 1; //省
    CITY_TYPE_CITY = 2; //市
    CITY_TYPE_DISTRICT = 3; //区
}

//地址
message UserAddress {
    int32 id = 1; //地址ID
    string receiver = 2; //收货人姓名
    string mobile = 3; //收货人手机
    City province = 4; //省
    City city = 5; //市
    City district = 6; //区
    string street = 7; //街道地址
    bool isDefault = 8; //是否默认地址
}

//@desc 获取收货地址列表
//@class Address
//@method GetUserAddressList
//请求服务端
message RequestAddressGetUserAddressList {
    BiuRpc.Base.Request base = 1;
    int32 page = 2; //页码（从1开始）
    int32 pageSize = 3; //页长度（默认10）
}

// 返回客户端
message ResponseAddressGetUserAddressList {
    BiuRpc.Base.Response base = 1;
    repeated UserAddress addressList = 2; //地址列表
    int32 totalPage = 3; //总页数
}

//@desc 获取收货地址详情
//@class Address
//@method GetUserAddressInfo
//请求服务端
message RequestAddressGetUserAddressInfo {
    BiuRpc.Base.Request base = 1;
    int32 addressId = 2; //地址ID
}

// 返回客户端
message ResponseAddressGetUserAddressInfo {
    BiuRpc.Base.Response base = 1;
    UserAddress addressInfo = 2; //地址
}

//@desc 添加收货地址
//@class Address
//@method AddUserAddress
//请求服务端
message RequestAddressAddUserAddress{
    BiuRpc.Base.Request base = 1;
    string receiver = 2; //收货人姓名
    string mobile = 3; //收货人手机
    int32 provinceId = 4; //省
    int32 city = 5; //市
    int32 district = 6; //区
    string street = 7; //街道地址
    bool isDefault = 8; //是否默认地址
}

// 返回客户端
message ResponseAddressAddUserAddress {
    BiuRpc.Base.Response base = 1;
}

//@desc 修改收货地址
//@class Address
//@method UpdateUserAddress
//请求服务端
message RequestAddressUpdateUserAddress{
    BiuRpc.Base.Request base = 1;
    string dreceiver = 2; //收货人姓名
    bool isUpdateReceiver = 3; //是否更新收货人姓名
    string mobile = 4; //收货人手机
    bool isUpdateMobile = 5; //是否更新收货人手机
    int32 provinceId = 6; //省
    bool isUpdateProvinceId = 7; //是否更新省
    int32 city = 8; //市
    bool isUpdateCity = 9 ; //是否更新市
    int32 district = 10; //区
    bool isUpdateDistrict = 11; //是否更新区
    string street = 12; //街道地址
    bool isUpdateStreet = 13; //是否更新街道地址
    bool isDefault = 14; //是否默认地址
    bool isUpdateIsDefault = 15; //是否更新是否默认地址
}

// 返回客户端
message ResponseAddressUpdateUserAddress {
    BiuRpc.Base.Response base = 1;
}

//========================================
//Address end
//========================================


