syntax = "proto3";

package BiuRpc.Base;

//请求包的头信息
message Header {
    SignHeaderRequestType requestType = 1; //请求类型
    int32 statusCode = 2; //状态码
    int32 moduleCode = 3; //模块
    int32 classCode = 4; //类
    int32 methodCode = 5; //方法
    SignHeaderProtocol protocol = 6; //数据协议
    SignHeaderCrypt crypt = 7; //加密方式
    string cyptKey = 8; //加密的密钥
    string sign = 9; //数据签名
}

//头部的协议类型
enum SignHeaderRequestType {
    HEADER_REQUEST_TYPE_NONE = 0; //未定义类型
    HEADER_REQUEST_TYPE_REQUEST = 1; //请求
    HEADER_REQUEST_TYPE_NOTIFY = 2; //通知
    HEADER_REQUEST_TYPE_RESPONSE = 3; //返回
    HEADER_REQUEST_TYPE_HANDLE = 4; //返回
}

//头部的协议类型
enum SignHeaderProtocol {
    HEADER_PROTOCOL_NONE = 0; //未定义类型
    HEADER_PROTOCOL_PB = 1; //Protobuf 
    HEADER_PROTOCOL_JSON = 2; //JSON
    HEADER_PROTOCOL_XML = 3; //XML
}

//头部的加密混淆类型 
enum SignHeaderCrypt {
    HEADER_CRYPT_NONE = 0; //未加密
    HEADER_CRYPT_RSA = 1; //RSA加密
}

//设备基础信息
message Request {
    string sessionId = 1; //会话ID
    string requestId = 2; //请求ID
    string token = 3;//验证session id 是否有效的token
    string nonce = 4;//随机值
    int32 timestamp = 5;//请求的时间戳
}

//服务器返回基础数据
message Response {
    string sessionId = 1; //会话ID
    string requestId = 2; //请求ID
    string token = 3;//验证session id 是否有效的token
    string nonce = 4;//随机值
    int32 timestamp = 5;//请求的时间戳
    int32 code = 6;//状态码
    string msg = 7;//提示信息
}

//返回客户端-空(致命错误等情况下默认返回该结构)
message ResponseDefault {
    Response base = 1;
}

//图片
message Picture{
    string url = 1; //图片URL
    int32 width = 2; //图片宽度
    int32 height = 3; //图片高度
    string token = 4; //图片令牌
    SignPictureDataType dataType = 5; //数据格式
    string contentType = 6; //图片格式
}

// 图片数据格式
enum SignPictureDataType{
    PICTURE_DATA_TYPE_NONE = 0; //无
    PICTURE_DATA_TYPE_URL = 1; //url
    PICTURE_DATA_TYPE_BASE64 = 2; //base64
}

//跳转
message Nav{
    SignNavType type = 1; //跳转类型
    string url = 2; //url
    int32 id = 3; //id
}

//跳转类型
enum SignNavType{
    LINK_TYPE_NONE = 0; //不跳转
    LINK_TYPE_WEB = 1; //Web页面
    LINK_TYPE_UPDATE = 2; //更新界面
    LINK_TYPE_USER_MESSAGE = 3; //用户消息内容
    LINK_TYPE_OUTSIDE_WEB = 4; //外部网页
    LINK_TYPE_ARTICLE = 5; //资讯
    LINK_TYPE_COUPON_OVERDUE = 6; //过期消息详情
}

//用户
message SimpleUser {
    string userId = 1; //用户open_id
    string username = 2; //用户名
    string email = 3; //邮箱
    string nickname = 4; //昵称
    Picture avatar = 5; //头像
    string realname = 6; //真实姓名
    bool isEmailVerify = 7; //邮箱是否认证
    bool isMobileVerify = 8; //手机号是否认证
    int32 scalperOrderCount = 9; //APP完成的订单数
    string amazonAccount = 10; //亚马逊账号
    string amazonEmail = 11; //亚马逊邮箱
    int32 regTime = 12; //注册时间
}

//用户信息
message User{
    string userId = 1; //用户ID
    string username = 2; //用户名
    string nickname = 3; //昵称
    string email = 4; //昵称
    Picture avatar = 5; //头像
    string mobile = 6; //手机
    string realname = 7; //真实姓名
    SignUserSex sex = 8; //性别
    int32 birthday = 9; //生日
    int32 unreadMessageCount = 10; //未读消息数
    int32 isCertificate = 11; // 是否身份认证
    string idCardNumber = 12; //身份证号码
    bool isEmailVerify = 13; //邮箱是否认证
    bool isMobileVerify = 14; //手机号是否认证
    string firstname = 15; //英文名
    string lastname = 16; //英文姓
    int32 currencyId = 17; //默认币种ID
    int32 regTime = 18; //注册时间
    int32 lastLoginTime = 19; //最后登录时间
    string money = 20; //账户余额
    string freezeMoney = 21; //账户余额
    int32 powerScore = 22; //APP积分余额
    int32 scalperOrderCount = 23; //APP完成的订单数
    repeated UserInterest interestList = 24; //兴趣列表
    string amazonAccount = 25; //亚马逊账号
    string amazonEmail = 26; //亚马逊邮箱
    bool hasDrawalAccount = 27; //是否拥有提现账号
    bool hasDrawalPwd = 28; //是否已经设置提现密码
}

// 兴趣列表
message UserInterest {
    int32 id = 1; //值
    string name = 2; //名称
}


//用户性别
enum SignUserSex{
    USER_SEX_NONE = 0; //未设置
    USER_SEX_MAN = 1; //男
    USER_SEX_WOMAN = 2; //女
}

//用户消息类型
enum SignUserMessageType{
    USER_MESSAGE_TYPE_SYSTEM = 0; //系统消息
    USER_MESSAGE_TYPE_OVERDUE_REMINDER = 1; //过期提醒
    USER_MESSAGE_TYPE_COUPON = 2; //优选消息
}

//用户消息
message UserMessage{
    int32 id = 1; //消息ID
    string senderId = 2; //发送人ID
    string title = 3; //内容
    string subTitle = 4; //内容
    string content = 5; //内容
    Nav nav = 6; //跳转
    SignUserMessageType type = 7; //类型
    bool isRead = 8; //是否已读
    int32 createTime = 9; //发送时间
    Picture logo = 10; //商户LOGO
}

//文件上传Base64请求信息
message UploadBase64FileRequest {
    string name = 1; //文件上传时的参数名
    string base64Content = 2; //文件存储令牌
}

//文件上传结果信息
message UploadFileResult {
    string name = 1; //文件上传时的参数名
    string token = 2; //文件存储令牌
    string path = 3; //存储路径
    string md5 = 4; //文件md5值
    int32 sha1 = 5; //文件sha1值
}

//图片上传结果信息
message UploadPictureResult {
    int32 id = 1; //上传成功后获取到的ID
    string name = 2; //图片上传时的参数名
    string token = 3; //图片存储令牌
    string path = 4; //存储路径
    string url = 5; //图片的完整URL
    string md5 = 6; //图片文件md5值
    string sha1 = 7; //图片文件sha1值
    int32 width = 8; //图片宽度
    int32 height = 9; //图片高度
    string mime = 10; //图片格式
}

//收货地址
message Address{
    int32 addressId = 1; //地址id
    string receiver = 2; //收货人
    string mobile = 3; //联系电话
    int32 provinceId = 4; //省份id
    string provinceName = 5; //省份
    int32 cityId = 6; //城市id
    string cityName = 7; //城市
    int32 districtId = 8; //区域id
    string districtName = 9; //区域
    string street = 10; // 街道地址
    int32 isDefault = 11; //是否默认地址
}

// 支付方式
enum SignPayment {
    PAYMENT_TYPE_BANK = 0; // 银行卡
    PAYMENT_TYPE_ALIPAY = 1; // 支付宝
    PAYMENT_TYPE_WECHAT = 2; // 微信
}

// 订单状态
enum SignOrderStatus {
    ORDER_STATUS_USELESS = 0; // 无效
    ORDER_STATUS_ORDER_WAIT = 1; // 待下单
    ORDER_STATUS_ORDER_SURE = 2; // 发布\确认报告
    ORDER_STATUS_ORDER_SUCCESS = 3; // 已完成
    ORDER_STATUS_ORDER_FAILED = 4; // 已终止
}
